8210803: Compilation failure in codeBlob.cpp for Windows 32-bit Summary: Added ordinary operator delete declaration within class Reviewed-by: kvn, rlichten, thartmann